--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,84 @@ body {
 }
 
 @media (min-width: 1000px) {
+  .titles {
+    display: flex;
+    gap: 30px;
+    max-width: fit-content;
+  }
+
+  .title {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    max-width: fit-content;
+  }
+
+  .text-title {
+    display: flex;
+    gap: 4px;
+    flex-direction: column;
+  }
+
+  .text-title textarea {
+    min-height: 100px;
+  }
+
+  .links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+
+  .post-form label {
+    max-width: fit-content;
+  }
+
+  .new {
+    min-height: 100%;
+    width: 100%;
+  }
+
+  .post-form {
+    border-radius: 30px;
+    padding: 30px;
+    position: relative;
+    z-index: 12;
+    gap: 20px;
+    border: 1px rgba(255, 255, 255, 0.14) solid;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .post-form input,
+  .post-form textarea,
+  .post-form button {
+    border-radius: 14px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+    padding: 10px 20px;
+    font-size: 1rem;
+    outline: none;
+    max-width: 90%;
+    border: 1px rgba(255, 255, 255, 0.14) solid;
+    color: white;
+    transition: .3s;
+  }
+
+  .post-form input {
+    max-width: 300px;
+  }
+
+  .post-form button {
+    max-width: 150px;
+  }
+
+  .post-form button {
+    cursor: pointer;
+  }
+
   .langs-tech a {
     display: grid;
     margin: 10px;
@@ -156,7 +234,7 @@ body {
     margin-left: 16px;
   }
 
-  header {
+  header:not(.new) {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -224,9 +302,9 @@ body {
 
   .contact-socials-wrp {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    margin-left: 30px;
+    justify-content: space-between;
+    gap: 1rem;
   }
 
   .socials-element {
@@ -235,12 +313,17 @@ body {
 
   .socel-wrp {
     display: flex;
+    color: white;
+    text-decoration: none;
     gap: 27px;
-    margin-block: 30px;
-    width: 250px;
     animation: socel-scroll cubic-bezier(1, 0.37, 0.58, 1) both;
     animation-timeline: view();
-    animation-range: entry 20% cover 30%
+    animation-range: entry 20% cover 30%;
+    background: rgb(24, 24, 31);
+    border-radius: inherit;
+    width: 337px;
+    margin: 1px;
+    padding: 15px;
   }
 
   .socel-wrp img {
@@ -308,7 +391,8 @@ body {
   .socials-element a {
     color: rgba(255, 255, 255, 0.836);
     transition: .3s;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    word-wrap: break-word;
     text-decoration: none;
   }
 
@@ -451,7 +535,7 @@ body {
     align-items: center;
   }
 
-  header {
+  header:not(.new) {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -538,7 +622,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 30px;
+    gap: 15px;
   }
 
   .socel-wrp {
@@ -548,6 +632,12 @@ body {
     animation-timeline: view();
     animation-range: entry 20% cover 30%;
     align-items: center;
+    box-sizing: border-box;
+    padding: 9px;
+    border-radius: inherit;
+    background: rgb(24, 24, 31);
+    margin: 1px;
+    color: white;
   }
 
   .socel-wrp img {
@@ -568,7 +658,7 @@ body {
     padding: 20px;
     margin: 1px;
     border-radius: 18px;
-    background: var(--mainBG);
+    background: rgb(24, 24, 31);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -619,6 +709,17 @@ body {
     margin: 7px 10px;
     transition: .3s;
     border-radius: 12px;
+  }
+
+  .post-form {
+    border-radius: 30px;
+    padding: 30px;
+    z-index: 12;
+    border: 1px rgba(255, 255, 255, 0.14) solid;
+    position: relative;
+    max-width: 90%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -898,12 +999,6 @@ main.projects>h1 {
   transform: none;
 }
 
-@media(prefers-reduced-motion) {
-  .hidden {
-    transition: none;
-  }
-}
-
 .socel-wrp:nth-child(1) {
   transition: .2s;
 }
@@ -1022,9 +1117,9 @@ header.error {
 
 .background-element:nth-child(1) {
   background: radial-gradient(var(--accent_hover), 10%, var(--mainBG));
-  width: 220px;
+  width: 290px;
   border-radius: 50%;
-  height: 109px;
+  height: 149px;
   transform: translateY(-10px);
   margin-inline: auto;
   animation: scale 60s linear infinite;
@@ -1032,8 +1127,8 @@ header.error {
 
 .background-element:nth-child(2) {
   background: linear-gradient(50deg, var(--accent2_hover), 10%, var(--mainBG));
-  width: 200px;
-  height: 60px;
+  width: 230px;
+  height: 100px;
   transform: translateY(10px);
   animation: rotate 30s linear infinite;
 }
@@ -1127,14 +1222,46 @@ header.error {
   background-position-x: 53px;
 }
 
-.login-form input:hover {
+input:hover {
   border-color: rgba(255, 255, 255, 0.699);
 }
 
-.login-form input:focus {
+input:focus {
   border-color: white;
 }
 
-.login-form input:focus::placeholder {
+input:focus::placeholder {
   color: white;
+}
+
+.socel-container {
+  text-decoration: none;
+  transition: .4s;
+  border-radius: 9px;
+  display: grid;
+}
+
+.socel-container:hover {
+  transform: scale(1.03);
+}
+
+.socel-container:nth-child(1) {
+  background: radial-gradient(#4285F4, var(--mainBG));
+}
+
+.socel-container:nth-child(2) {
+  background: radial-gradient(white, var(--mainBG));
+}
+
+.socel-container:nth-child(3) {
+  background: radial-gradient(#B8457E, var(--mainBG));
+}
+
+.socel-container:nth-child(4) {
+  background: radial-gradient(#FF5C5C, var(--mainBG));
+}
+
+.submit-wrp {
+  display: flex;
+  justify-content: right;
 }
